@@ -13,3 +13,4 @@
 - QwtPlotCurve: aggressive weeding added - a fast weeding algo for huge datasets with increasing x or y values
 - QwtSymbol fine tuning of QwtSymbol::AutoCache 
 - A new implementation of various spline interpolations
+- QwtRasterData::setInterval/interval changed into a pure virtual getter
